graded all
